<resources>
    <string name="app_name">CarX</string>
    <string name="i_am_a_driver">I Am a Driver</string>
    <string name="i_am_a_customer">I Am A Customer</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="log_out">Log Out</string>
    <string name="call_your_car">Call Your Car!</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="car">Car</string>
    <string name="settings">Settings</string>
    <string name="carx">CarX</string>
    <string name="carblack">CarBlack</string>
    <string name="carxl">CarXL</string>
</resources>
