<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerSettingsActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/driver_settings_image_iv"
        android:src="@drawable/default_user"
        android:layout_marginBottom="20sp"/>

    <EditText
        android:id="@+id/driver_settings_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="20sp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/driver_settings_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginBottom="20sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/driver_settings_Car_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/car"
        android:layout_marginBottom="20sp"
        android:inputType="textPersonName"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/driver_settings_confirm_btn"
        android:text="@string/confirm"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/driver_settings_back_btn"
        android:text="@string/back"/>

</LinearLayout>