<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLoginActivity">

    <EditText
        android:text="driver@driver.com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:id="@+id/Driver_Login_Email"/>

    <EditText
        android:text="123456"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/Driver_Login_Password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:id="@+id/Driver_Login_Login_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:id="@+id/Driver_Login_SignUp_btn"/>

</LinearLayout>